--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <img src="img/logo.png" alt="">
         <nav>
-            <ul id="menu">
+             <ul id="menu">
 
             <li><a href="">Projetos</a></li>
             <li><a href="">Cursos</a></li>
@@ -18,6 +18,15 @@
              </ul>
         </nav>
     </header>
+
+    <main id="perfil"> 
+        <img src="img/banner1.png" alt="">
+        <div id="perfil-dados">
+            <h1>Desenvolvedor Web Front End</h1>
+            <h2>Gustavo Macario</h2>
+            <p>Projetos Web</p>
+        </div>
+    </main>
 
 </body>
 </html>
