att projetos dia 11

--- a/index.html
+++ b/index.html
@@ -28,5 +28,25 @@
         </div>
     </main>
 
+    <section id="projetos">
+        <h2>Projetos</h2>
+        <div>
+        <div id="projetos-geral">
+            Desenvolvo projetos FrontEnd usando as tecnologias HTML, CSS e JavaScript.
+        </div>
+
+        <div id="projetos-lista">
+            <h3>Projeto Matrix</h3>
+            <p>Desenvolvedor FrontEnd</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In architecto consequuntur suscipit id libero odit eos accusamus. Quas neque vel numquam laboriosam hic facere delectus saepe voluptatibus voluptates tenetur. Sed?</p>
+            <ul id="projetos-tags">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JS</li>
+                <li>Figma</li>
+            </ul>
+        </div>
+    </div>
+</section>
 </body>
 </html>
