finalizada a sessao projetos

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <nav>
              <ul id="menu">
 
-            <li><a href="">Projetos</a></li>
-            <li><a href="">Cursos</a></li>
-            <li><a href="">Contato</a></li>
+            <li><a href="#projetos">Projetos</a></li>
+            <li><a href="#cursos">Cursos</a></li>
+            <li><a href="#contato">Contato</a></li>
              </ul>
         </nav>
     </header>
@@ -32,12 +32,12 @@
         <h2>Projetos</h2>
         <div>
         <div id="projetos-geral">
-            Desenvolvo projetos FrontEnd usando as tecnologias HTML, CSS e JavaScript.
+            Desenvolvo projetos <span class="principal-destaque">FrontEnd</span> usando as tecnologias HTML, CSS e JavaScript.
         </div>
 
         <div id="projetos-lista">
             <h3>Projeto Matrix</h3>
-            <p>Desenvolvedor FrontEnd</p>
+            <h3>Desenvolvedor FrontEnd</h3>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In architecto consequuntur suscipit id libero odit eos accusamus. Quas neque vel numquam laboriosam hic facere delectus saepe voluptatibus voluptates tenetur. Sed?</p>
             <ul id="projetos-tags">
                 <li>HTML</li>
@@ -46,7 +46,57 @@
                 <li>Figma</li>
             </ul>
         </div>
-    </div>
-</section>
+        <div id="projetos-lista">
+            <h3>Projeto Musicas</h3>
+            <h3>Desenvolvedor Ui/Ux</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In architecto consequuntur suscipit id libero odit eos accusamus. Quas neque vel numquam laboriosam hic facere delectus saepe voluptatibus voluptates tenetur. Sed?</p>
+            <ul id="projetos-tags">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JS</li>
+                <li>Figma</li>
+            </ul>
+        </div>
+        <div id="projetos-lista">
+            <h3>Projeto Hardware</h3>
+            <h3>Desenvolvedor FullStack</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In architecto consequuntur suscipit id libero odit eos accusamus. Quas neque vel numquam laboriosam hic facere delectus saepe voluptatibus voluptates tenetur. Sed?</p>
+            <ul id="projetos-tags">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JS</li>
+                <li>Figma</li>
+            </ul>
+        </div>
+        </div>
+    </section>
+<!-- final da sessao de projetos -->
+<!-- inicio da sessao de cursos -->
+    <section id="cursos">
+        <div id="cursos-grid">
+            <h2>Cursos</h2>
+            <div id="cursos-geral">
+                <div id="cursos-texto-principal">
+                    Atualmente estou cursando uma Qualificação de Assistente de Desenvolvimento de Sistemas, com duração de 620 horas no Senac São Paulo, unidade escolar de São João Da Boa Vista
+
+                    Também já conclui alguns cursos específicos da área de tecnologia.
+                </div>
+
+
+
+
+
+            </div>
+        </div>
+    </section>
+
+<!-- final  da sessao de cursos -->
+
+
+
+
+
+
+
 </body>
 </html>
