commit restante portfolio

--- a/index.html
+++ b/index.html
@@ -75,18 +75,49 @@
     <section id="cursos">
         <div id="cursos-grid">
             <h2>Cursos</h2>
-            <div id="cursos-geral">
-                <div id="cursos-texto-principal">
-                    Atualmente estou cursando uma Qualificação de Assistente de Desenvolvimento de Sistemas, com duração de 620 horas no Senac São Paulo, unidade escolar de São João Da Boa Vista
-
+    <div id="cursos-geral">
+            <div id="cursos-texto-principal">
+                    Atualmente estou cursando uma Qualificação de <span class="cursos-destaque">Assistente de Desenvolvimento de Sistemas</span>, com duração de 620 horas no Senac São Paulo, unidade escolar de São João Da Boa Vista.
                     Também já conclui alguns cursos específicos da área de tecnologia.
-                </div>
+                <div id="cursos-pai">
+                    <div id="cursos-lista">
+                        <h4>Qualificação Profissional</h4>
+                        <h3>Assistente De Suporte e Manutenção De Computadores</h3>
+                        <p>Senac</p>
+                    </div>
 
+                    <div id="cursos-lista">
+                        <h4>Curso Livre</h4>
+                        <h3>Formação em Hardware</h3>
+                        <p>Senac</p>
+                    </div>
 
+                    <div id="cursos-lista">
+                        <h4>Qualificação Profissional</h4>
+                        <h3>Assiste de Suporte e Manutenção De Redes</h3>
+                        <p>Senac</p>
+                    </div>
 
-
-
+                    <div id="cursos-lista">
+                        <h4>Qualificação Profissional</h4>
+                        <h3>Assistente de Desenvolvimento
+                            de Aplicativos Computacionais
+                        </h3>
+                        <p>Senac</p>
+                    </div>
+                    
+                    </div>
+                    <div id="cursos-complementares">
+                        <p>CURSOS COMPLEMENTARES</p>
+                        <div
+                        id="cursos-complementares-lista">
+                            <h3>ADMINISTRAÇÃO BASICA 62 HORAS</div>
+                            
+                        </div>
+                </div>  
             </div>
+    </div>
+
         </div>
     </section>
 
