--- a/index.html
+++ b/index.html
@@ -106,15 +106,21 @@
                         <p>Senac</p>
                     </div>
                     
-                    </div>
+                </div>
                     <div id="cursos-complementares">
-                        <p>CURSOS COMPLEMENTARES</p>
-                        <div
-                        id="cursos-complementares-lista">
-                            <h3>ADMINISTRAÇÃO BASICA 62 HORAS</div>
+                        <h5>CURSOS COMPLEMENTARES</h5>
+                        <div class="cursos-complementares-lista">
+                            <h3>ADMINISTRAÇÃO BASICA</h3>
+                            <h3>62 HORAS</h3>
+                        </div>
+                    </div>  
+                    <div id="idiomas">
+                        <h5>IDIOMA</h5>
+                        <div class="idioma-cor">
+                            <p>Inglês <span class="medio-cor">/ Médio</span></p>
                             
                         </div>
-                </div>  
+                    </div>
             </div>
     </div>
 
