--- a/index.html
+++ b/index.html
@@ -128,8 +128,10 @@
     </section>
 
 <!-- final  da sessao de cursos -->
-
-
+<!-- inicio sessao footer -->
+    <footer>
+        
+    </footer>
 
 
 
