--- a/index.html
+++ b/index.html
@@ -129,13 +129,51 @@
 
 <!-- final  da sessao de cursos -->
 <!-- inicio sessao footer -->
-    <footer>
-        
-    </footer>
+        <footer id="contato">
+            <div id="footer-conteudo">
+                <h2>Contato</h2>
+                <form action="">
+                    <div id="form-grid">
+                        <input type="text" name="nome" id="nome" placeholder="Nome"> 
+                        <input type="email" name="email" id="email" placeholder="E-mail">
+                        <input type="text" name="telefone" id="telefone" placeholder="Telefone">
+                        <select name="tipo" id="tipo">
+                            <option value="Selecione" disabled selected>Selecione...</option>
+                            <option value="duvidas">Dúvidas</option>
+                            <option value="servicos">Serviços</option>
+                            <option value="Sugestões">Sugestões</option>
+                            <option value="Contratar">Contratar</option>
+
+                        </select>
+                    </div>
+                        <button class="btn-contato" type="submit">Enviar</button>
+                </form>
+
+                <div id="footer-inferior">
+                    <div class="alinhar-esquerda">
+                        <p><a href="">email@email.com</a></p>
+                        <p><a href="https://github.com/Macas1310" target="_blank">github.com/Macas1310</a></p>
+                        <p><a href="https://www.linkedin.com/in/gustavo-oliveira-macario/" target="_blank">Linkedin.com/GustavoMacario</a></p>
+                    </div>
+                    <div class="alinhar-centro">
+                        <p>WhatsApp</p>
+                        <a href="https://wa.me/5519995847079" target="_blank">
+                                    (19) 99584-7079</a>
+                    </div>
+                    <div class="alinhar-direita">
+                        <p><a href="https://www.facebook.com/gustavo.macario.397/" target="_blank">Facebook</a></p>
+                        <p><a href="https://www.instagram.com/_gustavomacario/" target="_blank">Instagram</a></p>
+                        <p><a href="">Twitter</a></p>
+                    </div>
+                </div>
+
+                <div id="copy">
+                    <p>&copy; 2024 - Portfolio - Gustavo Macario</p>
+                </div>
 
 
-
-
-
+            </div>
+            
+        </footer>
 </body>
 </html>
